# mc-ising-analysis

./: .gitignore  Idea.md  Projektidee.md  README  Readme.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.res/: Timeline.md  mc_stock_gbm.py  montecarlo_tutorial.ipynb
src/: main.py  test.ipynb  test.py
src/lib/: analysis_result.py  helpers.py  ising_analysis.py  ising_model.py  lattice_2d.py  metropolis_routines.py
